<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Home Page-->
    <string name="app_name">EV Charging Station Helper</string>
    <string name="home_slogan">Go Green, Go Electric</string>
    <string name="alertDialog_no_gps_title">No GPS Signal</string>
    <string name="alertDialog_no_gps_text">Your device doesn\'t have GPS location.</string>
    <string name="alertDialog_no_internet_title">No Internet Connection</string>
    <string name="alertDialog_no_internet_text">Your device doesn\'t have internet connection.</string>
    <string name="alertDialog_ok_option">OK</string>

    <!-- Menu Page-->
    <string name="menu_title_menu">Menu</string>
    <string name="menu_title_overview">Overview</string>
    <string name="menu_title_search">Search</string>
    <string name="menu_title_favourite">Favourite</string>
    <string name="menu_title_nearby">Nearby</string>
    <string name="menu_title_socket">Charger Types</string>
    <string name="menu_title_realTime">Real-Time Status</string>

    <string name="menu_description_overview">Find out all charging stations</string>
    <string name="menu_description_search">Search your wanted charging stations</string>
    <string name="menu_description_favourite">Save your favourite record</string>
    <string name="menu_description_nearby">Find the nearest charging station</string>
    <string name="menu_description_socket">Sort the related charging station by charger types</string>
    <string name="menu_description_realTime">Get the real time status of charging station</string>

    <string name="menu_optionsmenu_share">Share</string>
    <string name="menu_optionsmenu_language">Language</string>
    <string name="menu_optionsmenu_about">About</string>

    <!-- About Page-->
    <string name="about_title">About</string>
    <string name="about_author">Author</string>
    <string name="about_telephone">Call Me</string>
    <string name="about_email">Email Me</string>
    <string name="about_version">Version</string>
    <string name="about_date">Release Date</string>

    <string name="about_author_name">Hui Yiu Wing (Tommy) 53032539</string>
    <string name="about_author_tel">+85298490124</string>
    <string name="about_author_email">aesops0124@gmail.com</string>
    <string name="about_app_version">1.0</string>
    <string name="about_app_date">July 1, 2015</string>

    <string name="about_email_subject">Email Enquiry on EVC application</string>
    <string name="about_email_text">I would like to ask ...</string>
    <string name="about_email_intent">Send Email</string>

    <!-- Search Page-->
    <string name="search_title">Search</string>
    <string name="search_text_title_address">Place:</string>
    <string name="search_text_title_district">District:</string>
    <string name="search_text_title_type">Type:</string>
    <string name="search_text_title_socket">Socket:</string>
    <string name="search_text_title_quantity">Quantity:</string>
    <string name="search_text_title_sort">Sort results by</string>
    <string name="search_text_title_nearest">Nearest locations</string>
    <string name="search_text_title_availability">Available right now</string>
    <string name="search_text_all">ALL</string>
    <string name="search_button_search">Search</string>
    <string name="search_button_clear">Clear</string>

    <!-- Search Result Page-->
    <string name="searchresult_alertDialog_no_result_title">No Matched Charging Stations Found</string>
    <string name="searchresult_alertDialog_no_result_text">You may modify the search criteria and search again.</string>
    <string name="searchresult_alertDialog_revise_option">Revise search</string>
    <string name="searchresult_title">Search Result</string>
    <string name="searchresult_searchAgain">Search Again</string>
    <string name="searchresult_search_result_text">&#160; matched charging stations found.</string>

    <!-- Overview Page-->
    <string name="overview_title">Overview</string>
    <string name="overview_tab_list">List</string>
    <string name="overview_tab_history">History</string>
    <string name="overview_search_view_title">Search Here...</string>
    <string name="overview_search_result_text">&#160; charging station items for &#160;</string>
    <string name="overview_history_alertDialog_delete_history">Are you sure you want to clear history?</string>
    <string name="overview_history_alertDialog_no_undo">You can\'t undo this action.</string>
    <string name="overview_history_alertDialog_no_option">Cancel</string>
    <string name="overview_history_alertDialog_yes_option">OK</string>
    <string name="overview_action_search_title">Quick Search</string>
    <string name="overview_action_delete_title">Delete All</string>

    <!-- Item Page-->
    <string name="item_title_location">Location</string>
    <string name="item_title_type">Type</string>
    <string name="item_title_socket">Socket</string>
    <string name="item_title_availability">Availability</string>
    <string name="item_title_availability_text">Total: &#160;</string>
    <string name="item_toast_addToFavorites">This has been added successfully.</string>
    <string name="item_toast_deleteFromFavorites">This has been removed successfully.</string>
    <string name="item_button_addToFavorites">Add to Favorite</string>
    <string name="item_button_deleteFromFavorites">Delete from Favorite</string>

    <!-- Favorites Page-->
    <string name="favorites_title">Favorite</string>
    <string name="favorites_alertDialog_no_favorites_title">No Favorite Charging Stations Found</string>
    <string name="favorites_alertDialog_no_favorites_text">You may add a station to this list via \"Add To Favorite\" button on the station\'s details.</string>
    <string name="favorites_alertDialog_ok_option">OK</string>
    <string name="favorites_alertDialog_search_option">Search Here</string>
    <string name="favorites_alertDialog_select_option">Select Here</string>
    <string name="favorites_alertDialog_delete_favorites_title">Are you sure you want to remove this favorite?</string>
    <string name="favorites_alertDialog_delete_favorites_text">You can\'t undo this action.</string>
    <string name="favorites_alertDialog_remove_option">Remove</string>
    <string name="favorites_alertDialog_cancel_option">Cancel</string>

    <!-- Share Page-->
    <string name="share_subject">Check out this app!</string>
    <string name="share_message"> - An easy way to find the nearest charging station in HK.</string>
    <string name="share_hint">Share via</string>

    <!-- Charger Type Page-->
    <string name="charger_type_title">Charger Type</string>
    <string name="charger_type_standard_title">Standard</string>
    <string name="charger_type_standard_subtitle">13A</string>
    <string name="charger_type_medium_title">Medium</string>
    <string name="charger_type_medium_subtitle">IEC 62196, SAE J1772, Others</string>
    <string name="charger_type_quick_title">Quick</string>
    <string name="charger_type_quick_subtitle">CHAdeMO, Others</string>

    <!-- Charger List Page-->
    <string name="charger_list_title">&#160; Charger</string>
    <string name="charger_list_title_standard">Standard</string>
    <string name="charger_list_title_medium">Medium</string>
    <string name="charger_list_title_quick">Quick</string>

    <!-- Charger List Item Page-->
    <string name="charger_list_item_title">&#160; Charger</string>

    <!-- Nearby Page-->
    <string name="nearby_title">Nearby</string>
    <string name="nearby_userLocation">My Current Location</string>
    <string name="nearby_alert_gpsOff">GPS navigation service is OFF. Please turn on the GPS and retry.</string>
    <string name="nearby_progressDialog_title">Processing...</string>
    <string name="nearby_progressDialog_content">Please Wait.</string>

    <!-- Real-Time Page-->
    <string name="realtime_title">Real-Time Status</string>
    <string name="realtime_scan_title">Register and Unregister</string>
    <string name="realtime_scan_subtitle">Scan the QR code of charging station</string>
    <string name="realtime_sort_title">Inquiry</string>
    <string name="realtime_sort_subtitle">Check the status of charging station</string>
    <string name="realtime_log_title">Status Log</string>
    <string name="realtime_log_subtitle">View the registration log of charging station</string>
    <string name="realtime_alertDialog_no_scanner_title">No Scanner Found</string>
    <string name="realtime_alertDialog_no_scanner_text">Do you want to download a scanner now?</string>
    <string name="realtime_alertDialog_no_scanner_yes_option">Yes</string>
    <string name="realtime_alertDialog_no_scanner_no_option">No</string>
    <string name="realtime_confirmDialog_scan_title">Please make sure the following scan is correct.</string>
    <string name="realtime_confirmDialog_scan_text_description">Name：</string>
    <string name="realtime_confirmDialog_scan_text_address">Address：</string>
    <string name="realtime_confirmDialog_scan_text_district">District：</string>
    <string name="realtime_confirmDialog_scan_text_type">Type：</string>
    <string name="realtime_confirmDialog_scan_text_socket">Socket：</string>
    <string name="realtime_confirmDialog_scan_yes_option">Yes</string>
    <string name="realtime_confirmDialog_scan_no_option">No</string>
    <string name="realtime_alertDialog_unmatched_location_title">Mismatched Location</string>
    <string name="realtime_alertDialog_unmatched_location_text">The QR code is not matched with your current location.</string>
    <string name="realtime_alertDialog_unmatched_ok_option">OK</string>
    <string name="realtime_alertDialog_invalid_qr_title">Invalid QR Code</string>
    <string name="realtime_alertDialog_invalid_qr_text">The QR code scanned is not valid. Please check with administrator.</string>
    <string name="realtime_alertDialog_invalid_qr_ok_option">OK</string>
    <string name="realtime_alertDialog_success_register_title">Registration Successfully</string>
    <string name="realtime_alertDialog_success_register_text">You have successfully registered for the charging station.</string>
    <string name="realtime_alertDialog_success_register_option">OK</string>

    <!-- Real-Time Sort Page-->
    <string name="realtime_sort_page_title">Inquiry</string>
    <string name="realtime_sort_title_district">By District</string>
    <string name="realtime_sort_title_type">By Type</string>
    <string name="realtime_sort_title_socket">By Socket</string>
    <string name="realtime_sort_title_availability">By Availability</string>

    <!-- Real-Time Sort Item Page-->
    <string name="realtime_sort_item_title_district">District</string>
    <string name="realtime_sort_item_title_type">Type</string>
    <string name="realtime_sort_item_title_socket">Socket</string>
    <string name="realtime_sort_item_title_availability">Availability</string>
    <string name="realtime_sort_item_statistic_text_total">Total:</string>
    <string name="realtime_sort_item_statistic_text_available">Available:</string>
    <string name="realtime_sort_item_statistic_text_unavailable">Not Available:</string>
    <string name="realtime_sort_item_text_available">Available</string>
    <string name="realtime_sort_item_text_unavailable">Not Available</string>

    <!-- Real-Time Log Page-->
    <string name="realtime_log_page_title">Status Log</string>
    <string name="realtime_log_alertDialog_no_log_title">No Status Log Found</string>
    <string name="realtime_log_alertDialog_no_log_text">Please check with administrator.</string>
    <string name="realtime_log_alertDialog_ok_option">OK</string>

    <!-- Setting Page-->
    <string name="setting_title">Setting</string>

    <!-- Snippet-->
    <string name="snippet_distance">&#160;km</string>
    <string name="snippet_time">&#160;mins</string>

</resources>
