<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:evcapplication="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_options_share"
        android:icon="@drawable/share_icon"
        android:orderInCategory="1"
        android:title="@string/menu_optionsmenu_share"
        evcapplication:showAsAction="never" />
    <item
        android:id="@+id/menu_options_language"
        android:icon="@drawable/language_icon"
        android:orderInCategory="5"
        android:title="@string/menu_optionsmenu_language"
        evcapplication:showAsAction="never" />
    <item
        android:id="@+id/menu_options_about"
        android:icon="@drawable/about_icon"
        android:orderInCategory="10"
        android:title="@string/menu_optionsmenu_about"
        evcapplication:showAsAction="never" />
</menu>
